# C-UnitTesting

./: .gitignore  Makefile  Readme.md  Sources.md
src/: main.c
src/include/: func_multiply.h  func_power.h  func_sum.h  test_func.h  test_func2.h
src/src/: func_multiply.c  func_power.c  func_sum.c  test_func.c
tests/Unity/: AllTests.c  Makefile
tests/Unity/test1/: test1.c  test1_runner.c
tests/Unity_Clean/: Makefile  Readme.md
tests/Unity_Clean/test_multiply/: test_multiply.c
tests/Unity_Clean/test_sum/: test_sum_runner.c
tests/Unity_Mock/: AllTests.c  CMakeLists.txt  Makefile  Readme.md  create_test.bat  run_tests.bat
tests/Unity_Mock/test_mock/: test_mock.c  test_mock_runner.c
tests/Unity_Mock/test_multiply/: CMakeLists.txt  test_multiply.c  test_multiply_runner.c
tests/Unity_Mock/test_power/: CMakeLists.txt  test_power.c  test_power_runner.c
tests/Unity_Mock/test_sum/: CMakeLists.txt  test_sum.c
